--- a/formulario-encuesta/index.html
+++ b/formulario-encuesta/index.html
@@ -18,6 +18,7 @@
     <option value="1">Hombre</option>
     <option value="2">Mujer</option>
     <option value="3">Otro</option>
+    <option value="4">No especificar</option>
   </select>
   </p>
   </label>
