--- a/formulario-encuesta/index.html
+++ b/formulario-encuesta/index.html
@@ -23,6 +23,7 @@
   </p>
   </label>
   <label id="gmail-label">
+      Correo utilizado
   <input type="radio" name="correo utilizado" value="gmail">gmail
   </label>
   <label id="gmail-label">
