--- a/formulario-encuesta/index.html
+++ b/formulario-encuesta/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <link href="style.css"
+      rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,18 +14,21 @@
 
     <form id="survey-form">
   <label id="name-label">Nombre: <input id="name" placeholder="introduce tu nombre" type="text" name="name" size="30"></label>
+  <br>
   <label id="email-label">Correo: <input id="email" placeholder="introduce tu email" type="email" name="email" size="50"></label>
+  <br>
   <label id="number-label">Numero: <input id="number" placeholder="numero" type="number" name="number" size="10" min="0" max="99"></label>
+  <br>
   <input id="dropdown"><label id="sex-label">Sexo: <select name="sex">
     <option value="1">Hombre</option>
     <option value="2">Mujer</option>
     <option value="3">Otro</option>
     <option value="4">No especificar</option>
   </select>
-  </p>
+  <br>
   </label>
   <label id="gmail-label">
-      Correo utilizado
+      Correo utilizado:
   <input type="radio" name="correo utilizado" value="gmail">gmail
   </label>
   <label id="gmail-label">
@@ -32,6 +37,9 @@
   <label id="gmail-label">
   <input type="radio" name="correo utilizado" value="yahoo">yahoo
   </label>
+  <br>
+  <textarea id="textarea" name="texto" rows="4" cols="50"></textarea>
+  <input type="submit" value="Enviar formulario" />
 </form>
 </body>
 </html>
